--- a/templates/sez_pers/stats.html
+++ b/templates/sez_pers/stats.html
@@ -6,7 +6,11 @@
 <div class="col">    
 <div class="card bg-dark mb-3" style="width: 18rem;">
     <center>
+      {%if stats[0]>400%}
+    <img src="../static/skin-hd.png" style="width:100px !important;" class="card-img-top" alt="SKIN HD">
+      {%else%}
     <img src="https://assets.open.mp/assets/images/skins/{{stats[0]}}.png" style="width:100px !important;" class="card-img-top" alt="SKIN HD">
+      {%endif%}
     <div class="card-body">
       <h5 class="card-title text-white">{{username}}</h5>
     </div>
@@ -23,7 +27,7 @@
 
 <div class="col">
 {%for v in range(len_veh)%}
-  <div class="card mb-3 bg-dark text-white" style="width: 800px;">
+  <div class="card mb-3 bg-dark text-white" style="min-width:700px; max-width: 900px;">
     <div class="row g-0">
       <div class="col-md-4">
         <img src="https://assets.open.mp/assets/images/vehiclePictures/Vehicle_{{veh[v][0]}}.jpg"  style="width:250px !important;" alt="...">
