Primo rilascio BETA (UCP v1.0.0)
#   • Modificata funzione Registra Reato + Metti ricercato [SEZ. POLIZIA]
#   • Aggiunta funzione Lista Ricercati [SEZ. POLIZIA]
#   • Aggiunta funzione Rimuovi ricercato [SEZ. POLIZIA]
#   • Impostati Log più precisi tramite telegram per polizia.
#   • Aggiunta foto singola per le skin hd.
#   • Aggiunta la semplice segnalazione nella fedina. [SEZ. POLIZIA]
#   • Aggiunta News automatica quando c'è un nuovo ricercato.

--- a/templates/pd/reg_reato.html
+++ b/templates/pd/reg_reato.html
@@ -15,6 +15,9 @@
         <input type="text" class="form-control" id="multa" placeholder="Numero Intero" name="multa">
       </div>
       <div class="checkbox">
+        <label><input type="checkbox" name="ricercato"> IMPOSTA SOGGETTO RICERCATO.</label>
+      </div>
+      <div class="checkbox">
         <label><input type="checkbox" name="prigione"> Il sospetto è stato Imprigionato.</label>
       </div>
       <button type="submit" class="btn btn-success">Registra Reato</button>
