--- a/templates/sez_pers/stats.html
+++ b/templates/sez_pers/stats.html
@@ -7,7 +7,7 @@
 <div class="card bg-dark mb-3" style="width: 18rem;">
     <center>
       {%if stats[0]>400%}
-    <img src="../static/skin-hd.png" style="width:100px !important;" class="card-img-top" alt="SKIN HD">
+    <img src="../../static/skin-hd.png" style="width:100px !important;" class="card-img-top" alt="SKIN HD">
       {%else%}
     <img src="https://assets.open.mp/assets/images/skins/{{stats[0]}}.png" style="width:100px !important;" class="card-img-top" alt="SKIN HD">
       {%endif%}
