--- a/templates/faz_pula.html
+++ b/templates/faz_pula.html
@@ -329,6 +329,31 @@
         </div>
       {%endif%}
       
+      {%if visualizza_ricercati:%}
+          <div class="col price-table">
+            <div class="card text-center">
+                <a href="/ricercati">
+                    <div class="title">
+                        <i class="fa fa-paper-plane"></i>
+                        <h2>Lista Ricercati</h2>
+                    </div>
+                  </a>
+            </div>
+        </div>
+      {%endif%}
+
+      {%if rimuovi_ricercati:%}
+          <div class="col price-table">
+            <div class="card text-center">
+                <a href="/rimuovi-ricercato">
+                    <div class="title">
+                        <i class="fa fa-paper-plane"></i>
+                        <h2>Rimuovi RIcercato</h2>
+                    </div>
+                  </a>
+            </div>
+        </div>
+      {%endif%}
       </div>
      
     </section>
