--- a/templates/state0.html
+++ b/templates/state0.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JR in Manutenzione</title>
+    <title>PSF - UCP in Manutenzione</title>
 </head>
 <body>
     <style>
