Primo rilascio BETA (UCP v1.1.0)
#   • Fixate lettere RI da RIMUOVI RICERCATO [SEZ. POLIZIA]
#   • Cambiato Credito: in Credito telefonico: [SEZ. PERSONAGGIO]
#   • Unica variabile per cambiare la versione della Web APP
#   • Aggiunto sistema LOG, text file divisi in date
#   • Cambiato sis Mess privato, da nome_destinatario a Numero_destinatario
#   • Modificata Lista STAFF
#   • Aggiunta funzione nuova formattazione orario
#   • Modificato il template della sezione regolamenti

--- a/templates/faz_pula.html
+++ b/templates/faz_pula.html
@@ -348,7 +348,7 @@
                 <a href="/rimuovi-ricercato">
                     <div class="title">
                         <i class="fa fa-paper-plane"></i>
-                        <h2>Rimuovi RIcercato</h2>
+                        <h2>Rimuovi Ricercato</h2>
                     </div>
                   </a>
             </div>
