--- a/templates/sez_pers/stats.html
+++ b/templates/sez_pers/stats.html
@@ -18,7 +18,7 @@
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Età: {{stats[1]}} Anni</li>
       <li class="list-group-item">Numero: {{stats[2]}}</li>
-      <li class="list-group-item">Credito: {{stats[3]}} pnt.</li>
+      <li class="list-group-item">Credito telefonico: {{stats[3]}} pnt.</li>
       <li class="list-group-item">Soldi: {{stats[4]}}$</li>
       <li class="list-group-item">Banca: {{stats[5]}}$</li>
     </ul>
