--- a/templates/template_panel.html
+++ b/templates/template_panel.html
@@ -43,7 +43,7 @@
         <nav class="sb-topnav navbar navbar-expand navbar-light bg-light justify-content-between align-items-center">
             <div>
             <button class=" m-2 btn btn-link btn-sm order-1s order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
-            <a class="navbar-brand p-1 text-dark" href="#">Project San Fierro [UCP v1.0.0]</a>
+            <a class="navbar-brand p-1 text-dark" href="#">Project San Fierro [UCP v{{versione}}]</a>
             </div>
             <!-- Navbar Search-->
             
@@ -178,7 +178,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Powered By Kekko.py for Project San Fierro [UCP v1.0.0]</font></font></div>
+                            <div class="text-muted"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Powered By Kekko.py for Project San Fierro [UCP v{{versione}}]</font></font></div>
                         </div>
                     </div>
                 </footer>
