--- a/templates/ems/send_sms.html
+++ b/templates/ems/send_sms.html
@@ -3,7 +3,7 @@
     <form method="post">
       <p style="color: lightsalmon;">{{error}}</p>
       <div class="form-group">
-        <label for="sospetto">Nome Destinatario</label>
+        <label for="sospetto">Numero Destinatario</label>
         <input type="text" class="form-control" id="sospetto" placeholder="Nome_Cognome" name="user">
       </div>
       <div class="form-group">
