--- a/templates/scelta_pg.html
+++ b/templates/scelta_pg.html
@@ -44,7 +44,7 @@
         <div class="panel left-panel">
           <div class="content">
             <h3>Project San Fierro</h3>
-            <h4>UCP v[1.0.0]</h4>
+            <h4>UCP v[{{versione}}]</h4>
             <p>
             Developed by @kekko.py
             </p>
