--- a/templates/sez_ringraziamenti.html
+++ b/templates/sez_ringraziamenti.html
@@ -2,69 +2,68 @@
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
-<center>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-        <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Sviluppo UCP
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>
+
+<ul class="list-group">
+
+  <li class="list-group-item p-5">
+    <strong>
+                  <h2>SVILUPPO UCP</h2><br>
+                  Ringrazio @xyrod, per la cordinazione e la gestione della parte grafica.
+                  <br>
                   Ringrazio tutto lo staff di Project San Fierro per tutto l'aiuto che mi è stato dato!
                   <br>
                   Grazie anche a tutti coloro che nel loro piccolo, hanno dato consigli e idee per espadere il prodotto.
               </strong>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Scrittura Regolamenti
-            </button>
-          </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                <strong>
-                    Ringrazio particolamente TumFoxita|Flores, YangOblio, Zaytah.
-                    <br>
-                    Per il tempo dedicato alla scrittura dei regolamenti.
-                </strong>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              STAFF
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>
-                @Murphy - Founder - Community Manager<br>
-                @Flores - Community Manager - Team Legali<br>
-                @IS-7 - Founder - Scripter<br>
-                @Ronaldo© - Founder - Mapper<br>
-                @Spotty - Scripter<br>
-                @Dallas - Scripter<br>
-                @While- Web Developer<br>
-                @JuanScure - Leader Admin - Team Legali<br>
-                @Mamuels - Game Admin Generale<br>
-                @novantasette - Game Admin - Resp. report<br>
-                @Clemi Game Admin Generale<br>
-                @Oblio -Game Admin - Team Illegali<br>
-                @Zaytah Game Admin - Team Illegali<br>
-                @Kekko.py - Helper - Developer<br>
-              </strong>
-            </div>
-          </div>
-        </div>
-      </div>
-</center>
+  </li>
+
+  <li class="list-group-item p-5">
+    <strong>
+      <h2>BETA TESTING</h2><br>
+      Ringrazio:<br>
+      &middot; AL57 <br>
+      &middot; Xyrod <br>
+      &middot; Novantasette <br>
+      &middot; XxxantonioxX <br>
+      &middot; Endriuw_YT <br><br>
+
+      Per le proposte fatte e per i debug dell'intera web-app!
+  </strong>
+  </li>
+
+  <li class="list-group-item p-5">
+    <strong>
+      <h2>SCRITTURA REGOLAMENTI</h2><br>
+      Ringrazio particolamente TumFoxita|Flores, YangOblio, Zaytah.
+      <br>
+      Per il tempo dedicato alla scrittura dei regolamenti.
+  </strong>
+  </li>
+
+  <li class="list-group-item p-5"><strong>
+    <h2>LISTA STAFF</h2><br>
+                |------------ @Management------------ |<br><br>
+
+                Murphy - Ryan Murphy | Owner - Staff Coordinator - Community Manager<br>
+                IS-7 - Dimitri Zaytzev | Founder - Development Manager<br>
+                Ronaldo© - Cheryl Kreuk | Founder - Leader Mapper<br>
+                Flores - Antonio Flores | Community Manager - Team Fazioni Legali<br><br>
+
+                |------------@Amministratore ------------ |<br><br>
+
+                JuanScure - Owen Park | Leader Admin - Team Fazioni Legali<br>
+                novantasette - Zack Jweel | Game Admin - Team Report<br>
+                Oblio - Travis Bickle | Game Admin - Team Fazioni Illegali - Executive Director<br>
+                Zaytah - Leroy Williams | Game Admin - Team Fazioni Illegali<br>
+                {{While}} - David While | Game Admin - Web Developer<br><br>
+
+                |------------ @Helper  ------------ |<br><br>
+
+                Kekko.py - Ginny Swift | Helper - UCP Developer<br><br>
+
+                |------------ 3rd PARTY ------------ |<br><br>
+
+                Spotty - Charles Westerland | 3rd Party Developer - Scripter<br>
+                {{While}} - David While | 3rd Party Developer - Web Developer<br>
+              </strong></li>
+
+</ul>
