--- a/templates/pd/send_sms.html
+++ b/templates/pd/send_sms.html
@@ -4,7 +4,7 @@
       <p style="color: lightsalmon;">{{error}}</p>
       <div class="form-group">
         <label for="sospetto">Numero Destinatario</label>
-        <input type="text" class="form-control" id="sospetto" placeholder="Nome_Cognome" name="user">
+        <input type="text" class="form-control" id="sospetto" placeholder="Numero" name="user">
       </div>
       <div class="form-group">
         <label for="reato">Messaggio</label>
