--- a/templates/pd/reg_reato.html
+++ b/templates/pd/reg_reato.html
@@ -11,7 +11,7 @@
         <input type="text" class="form-control" id="reato" placeholder="reato1, reato2, ...." name="reato">
       </div>
       <div class="form-group">
-        <label for="multa">Importo Multa:</label>
+        <label for="multa">Importo Multa: (SOLO NUMERO INTERO, SENZA $)</label>
         <input type="text" class="form-control" id="multa" placeholder="Numero Intero" name="multa">
       </div>
       <div class="checkbox">
